<resources>
    <string name="app_name">Liberty Note</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="email_required">Email Required</string>
    <string name="create_first_note">Create your first Note!</string>
    <string name="note_deleted">Note deleted</string>
    <string name="enter_valid_username">Enter a valid username</string>
    <string name="login_failed">Login failed</string>
    <string name="note_created">Note created</string>
    <string name="error_creating_note">Error creating note</string>
    <string name="error_deleting_note">Error deleting note</string>
    <string name="liberty_note">Liberty Note</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="title">Title</string>
    <string name="write_your_note_here">Write your note here…</string>
    <string name="untitled">Untitled</string>
    <string name="write_your_first_note">Write your first note!</string>
    <string name="try_again">Try again</string>
    <string name="account_created">Account created</string>
    <string name="error_creating_account">Error creating account</string>
    <string name="name_empty">Enter your name</string>
    <string name="email_empty">Enter your email</string>
    <string name="terms_unchecked">Agree to terms of service</string>
    <string name="situation_report">Situation Report</string>
    <string name="exception_help">Something unexpected happened. Please share this report with us so keywe can improve the app.</string>
    <string name="report_exception_failed">Sharing failed</string>
    <string name="share">Share</string>
    <string name="go_back">Go back</string>
    <string name="delete">Delete</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="email_sent">Check your email</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="about">About</string>
    <string name="version_number">Version number:</string>
    <string name="version">version</string>
    <string name="build_number">Build number:</string>
    <string name="build">build</string>
    <string name="liberty_infrasystems">2020 Liberty Infrasystems</string>
    <string name="liberty_note_icon">Liberty Note icon</string>
    <string name="menu">Menu</string>
</resources>
