<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textViewLoginTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:letterSpacing="0.25"
        android:text="@string/liberty_note"
        android:textColor="@color/purple"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAboutLabel" />

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="@color/purple"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:focusable="true"
        android:clickable="true"
        android:padding="6dp"
        android:contentDescription="@string/go_back"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline40"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/liberty_note_icon"
        app:layout_constraintBottom_toTopOf="@+id/textViewCopyrightLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewAboutLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/about"
        android:textSize="24sp"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

    <TextView
        android:id="@+id/textViewVersionNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/version_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/textViewVersionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/version"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewVersionNumberLabel"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/textViewBuildNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/build_number"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toBottomOf="@+id/textViewVersionNumberLabel" />

    <TextView
        android:id="@+id/textViewBuildNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/build"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textViewVersionNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewVersionNumber" />

    <TextView
        android:id="@+id/textViewCopyrightLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/liberty_infrasystems"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />

</androidx.constraintlayout.widget.ConstraintLayout>